complete post interactions in mobile
